# aws-copilot

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
agentpro/: deploy_graph.yaml
backend/: __init__.py  credentials.py  main.py
backend/agents/: __init__.py  aws.py  aws_mcp.py  github_deploy.py  runtime.py
backend/tests/: test_api.py  test_aws_tool.py  test_credentials.py  test_github_deploy_tool.py
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  DeployButton.tsx  DeploymentChatbot.tsx  StatusIndicator.tsx
frontend/src/lib/: websocket.test.ts  websocket.ts
frontend/src/pages/: Index.tsx
scripts/: dev-up.sh  run-backend.sh
