[project]
name = "aws-copilot"
version = "0.1.0"
description = "FastAPI backend serving a Vite React frontend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "boto3>=1.35.54",
    "pymongo>=4.10.1",
    "agentproplus",
]

[project.optional-dependencies]
dev = [
    "watchfiles>=0.24.0",
    "httpx>=0.28.1",
    "pytest>=8.3.4"
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["watchfiles>=0.24.0", "httpx>=0.28.1", "pytest>=8.3.4"]
python-preference = "managed"

[tool.uv.sources]
agentproplus = { git = "https://github.com/rgtlai/AgentProPlus", rev = "main" }


[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = ["backend", "pyproject.toml"]
